# Precis

./: .gitignore  README.md  azure-pipelines.yml
src/console/: pr_console.cpp
src/cove/barn/: cv_aid.cpp  cv_aid.h  cv_cexpr.h  cv_cmdexec.cpp  cv_cmdexec.h  cv_compare.h  cv_frager.h  cv_include.cpp  cv_include.h  cv_ptrslot.h  cv_trace.cpp  cv_trace.h  cv_typerep.cpp  cv_typerep.h  cv_version.h.in
src/cove/flux/: cv_cask.h  cv_fileflux.h  cv_serializer.h  cv_spritz.cpp  cv_spritz.h
src/cove/silo/: cv_arena.h  cv_array.h  cv_crate.h  cv_craterepos.h  cv_cstr.h  cv_dlist.h  cv_dotstream.h  cv_fileflux.h  cv_freestore.h  cv_repos.h  cv_stack.h  cv_stash.h  cv_tuple.h
src/cove/snip/: cv_cmdexec.cpp  cv_cmdexec.h  cv_shared.h  cv_typerep.cpp
src/cove/stalks/: cv_atomic.h  cv_datacarousal.h  cv_easel.h  cv_easelstats.h  cv_fileeasel.h  cv_timer.h  cv_workeasel.h
src/fresco/: fr_colorswatch.cpp  fr_colorswatch.h  fr_mainapp.cpp  fr_mainwindow.cpp  fr_mainwindow.h  fr_mdi.qrc  fr_mdichild.cpp  fr_mdichild.h  fr_mdlapp.cpp  fr_toolbar.cpp  fr_toolbar.h  mdi.vcxproj
src/fresco/tenor/: fr_include.cpp  fr_include.h
src/segue/atelier/: sg_atelier.h
src/segue/colophon/: sg_atelier.h  sg_ateliereasel.h  sg_bastion.h  sg_blossomatelier.h  sg_cfastate.cpp  sg_cfastate.h  sg_dfastate.cpp  sg_dfastate.h  sg_distrib.h  sg_filter.cpp  sg_filter.h  sg_fsaelemcnstr.cpp  sg_fsaelemcnstr.h  sg_fsastate.cpp  sg_fsastate.h  sg_reposatelier.h  sg_rulelump.h  sg_tokeneasel.h
src/segue/epigraph/: sg_bitset.h  sg_chset.cpp  sg_chset.h  sg_distrib.cpp  sg_distrib.h  sg_ecdistribdb.cpp  sg_ecdistribdb.h  sg_ecoptimize.cpp  sg_ecoptimize.h  sg_ecsspinedb.cpp  sg_ecsspinedb.h  sg_parsenumerics.h  sg_parser.h  sg_partition.h  sg_partitiondb.h  sg_shard.h  sg_spine.cpp  sg_spine.h  sg_syntaxtree.h
src/segue/grammar/: sg_rexpgrammar.h  sg_xmlgrammar.h  sg_xmlshard.h
src/segue/tenor/: sg_chset.h  sg_cmdanneal.cpp  sg_cmdatelier.cpp  sg_cmdfilt.cpp  sg_cmdrexp.cpp  sg_cmdserial.cpp  sg_cmdtimbre.cpp  sg_cmdxml.cpp  sg_include.cpp  sg_include.h
src/segue/timbre/: sg_bitset.h  sg_chset.cpp  sg_chset.h  sg_distrib.cpp  sg_distrib.h  sg_ecdistribdb.cpp  sg_ecdistribdb.h  sg_ecoptimize.cpp  sg_ecoptimize.h  sg_parsenumerics.h  sg_parser.h  sg_partition.h  sg_partitiondb.h  sg_syntaxtree.h  sg_timbrenode.h  sg_timbreparser.h  sg_timbreshard.h
src/segue/tremolo/: fsaelemcnstr.cpp  sg_atelier.h  sg_ateliereasel.h  sg_autom.cpp  sg_autom.h  sg_automcnstr.cpp  sg_automcnstr.h  sg_automelem.cpp  sg_automelem.h  sg_automstate.cpp  sg_automstate.h  sg_dfastate.cpp  sg_dfastate.h  sg_filter.cpp  sg_filter.h  sg_fsaelemcnstr.cpp  sg_fsaelemcnstr.h  sg_fsastate.cpp  sg_fsastate.h
src/segue/xml/: sg_xmlgrammar.h  sg_xmlnode.h  sg_xmlshard.h
src/trellis/stalks/: tr_atomic.h  tr_datacarousal.h  tr_ringbuf.h
src/trellis/swarm/: tr_worker.cpp  tr_worker.h
src/trellis/tenor/: tr_cmdtrellis.cpp  tr_include.cpp  tr_include.h
toolkit/builds/VS/: Precis.sln  console.vcxproj  cove.vcxproj  segue.vcxproj
toolkit/builds/cmake/: CMakeLists.txt
toolkit/builds/code/: CMakeLists.txt  CMakeSettings.json
toolkit/builds/nbproject/: configurations.xml  project.xml
toolkit/builds/qmake/: fresco.pro
toolkit/builds/vs19/: Fresco.sln  cove.vcxproj  mdi.sln  mdi.vcxproj
workbench/: .wbashinit
